# phish-triage

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.omo/ulw-loop/019eb280-96ee-7093-9678-162507b1009c/: brief.md  goals.json  ledger.jsonl
detections/: README.md
detections/sigma/: R01_spf_fail_reply_to_mismatch.yml  R02_new_sender_domain_auth_fail.yml  R03_brand_display_name_spoof.yml  R04_url_shortener_in_mail.yml  R05_attachment_hash_vt_hit.yml  R06_suspicious_tld_link.yml  R07_base64_html_form.yml  R08_dmarc_reject_bypass.yml
detections/spl/: R01_spf_fail_reply_to_mismatch.spl  R02_new_sender_domain_auth_fail.spl  R03_brand_display_name_spoof.spl  R04_url_shortener_in_mail.spl  R05_attachment_hash_vt_hit.spl  R06_suspicious_tld_link.spl  R07_base64_html_form.spl  R08_dmarc_reject_bypass.spl
docs/: HEALTH_REPORT.md  RELEASING.md  retrospective.md  stage1-parsing-walkthrough.md  stage2-enrichment-walkthrough.md  stage3-detection-engineering.md  why.md
docs/handoffs/: 2026-07-19-documentation-refresh.md
src/phish_triage/: __init__.py  cli.py  enrich.py  parser.py
src/phish_triage/web/: __init__.py  __main__.py
src/phish_triage/web/static/: style.css
src/phish_triage/web/templates/: index.html  report.html
tests/: make_fixtures.py  test_enrich.py  test_parser.py  test_web.py
tests/fixtures/: benign.eml  phish_sample.eml
